<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature1"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="signature2"
            app:title="@string/signature_title2"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply2"
            app:entries="@array/reply_entries2"
            app:entryValues="@array/reply_values2"
            app:key="reply2"
            app:title="@string/reply_title2"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment1"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />
        <SwitchPreferenceCompat
            android:id="@+id/switchPreferenceCompat"
            app:dependency="sync"
            app:key="attachment2"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title2" />

    </PreferenceCategory>

</PreferenceScreen>